paragraph style shouldn't read graphics-properties This fixes a problem where the frame border is read to mean a paragraph border We also load padding into the textshapedata and use it

BUG:282617